customer data modified

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
     "name": "root/app",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    }
 }
