--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,11 @@
 {
     "name": "root/app",
-    "require": {},
     "autoload": {
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12"
     }
 }
